aplicacao angular funcionando com atualizacao de rota

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>D3.js</title>
+    <title>San Francisco's Bus System Map</title>
 
     <!-- load styles -->
     <link rel="stylesheet" type="text/css" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
@@ -65,7 +65,7 @@
     <!-- d3 module -->
     <script type="text/javascript" src="app/components/d3/d3.module.js"></script>
     <script type="text/javascript" src="app/components/d3/load-d3.service.js"></script>
-    <script type="text/javascript" src="app/components/d3/draw-graph.service.js"></script>
+    <script type="text/javascript" src="app/components/d3/picasso.service.js"></script>
 
     <!-- nextbus module -->
     <script type="text/javascript" src="app/components/nextbus/nextbus.module.js"></script>
