update app path

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>San Francisco's Bus System Map</title>
+    <base href="/d3-muni/" />
 
     <!-- load styles -->
     <link rel="stylesheet" type="text/css" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
