defer loading streets

--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,12 @@
     <meta charset="UTF-8">
     <title>San Francisco's Bus System Map</title>
     <base href="/d3-muni/" />
-
     <!-- load styles -->
     <link rel="stylesheet" type="text/css" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.min.css">
 
     <!-- load angular -->
-    <script type="text/javascript" src="assets/libs/angular/angular.js"></script>
+    <script type="text/javascript" src="assets/libs/angular/angular.min.js"></script>
     <script type="text/javascript" src="assets/libs/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="assets/libs/angular-resource/angular-resource.min.js"></script>
 </head>
@@ -34,10 +33,10 @@
     <div data-ng-view></div>
 
     <!-- external scripts & d3 -->
-    <script type="text/javascript" src="assets/libs/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="assets/libs/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="assets/libs/jquery.xml2json/src/jquery.xml2json.js"></script>
-    <script type="text/javascript" src="assets/libs/bootstrap/dist/js/bootstrap.js"></script>
-    <script type="text/javascript" src="assets/libs/d3/d3.js"></script>
+    <script type="text/javascript" src="assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/libs/d3/d3.min.js"></script>
     <script type="text/javascript" src="assets/libs/underscore/underscore.js"></script>
 
     <!-- core angular module -->
