adjusts on mobile view

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>San Francisco's Bus System Map</title>
     <base href="/d3-muni/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- load styles -->
     <link rel="stylesheet" type="text/css" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.min.css">
